--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,7 @@
+body {
+    background-color: #B4E1F4;
+}
+
 #container {
     width: 80%;
     margin: 0 auto;
@@ -8,6 +12,11 @@ article {
     width: 50%;
     margin: 0 auto 0.5em;
     padding: 0.5em;    
+}
+
+.twit {
+    background-color: white;
+    border-radius: 10px;
 }
 
 .twitdate, .twitheure {
@@ -43,6 +52,8 @@ input, .bouton {
 
 input[type="submit"], .bouton {
     background-color: #ddd;
+    border-radius: 10px;
+    box-shadow: 0px 1px 1px 1px;
 }
 
 form {
